--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1646,6 +1646,12 @@ NLP/KG Field：
     |
   <br />
   <br />
+Computational Linguistics Field：
+<br />
+    <a href="https://a-quei.github.io/" target="_blank">Guanyi Chen</a>
+    |    
+  <br />
+  <br />
 Human-computer Interaction Field：
 <br />
     <a href="https://pi.cs.tsinghua.edu.cn/people/#faculty" target="_blank">Yuanchun Shi</a>
