--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -306,6 +306,8 @@
     |
     <a href="#" target="_blank">ICBK</a>
     |
+    <a href="https://mp.weixin.qq.com/s/gZqE3FmZCDXPuF-ouhGcbw" target="_blank">NLGIW</a>
+    |
     <a href="#" target="_blank">CHIP</a>
     |
     <a href="#" target="_blank">IJCKG</a>
