--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1783,10 +1783,16 @@ Neuroscience Field：
   <br />
 Biochemistry Field：
 <br />
-    <a href="https://minlab.ac.cn/members/" target="_blank">Mingwei Min [<a href="https://minlab.ac.cn/" target="_blank">Min Lab</a>]</a>
-    |
+<!-- 北京智源研究院, https://www.baai.ac.cn/ -->
     <a href="https://bigaidream.github.io/" target="_blank">Jie Fu [<a href="https://zhuanlan.zhihu.com/p/477800872?utm_source=wechat_timeline&utm_medium=social&utm_oi=69409255194624&s_r=0&wechatShare=2" target="_blank">Recruitment info</a>]</a>
     |
+<!-- imaging- and genetic-based techniques -->
+    <a href="https://minlab.ac.cn/members/" target="_blank">Mingwei Min [<a href="https://minlab.ac.cn/" target="_blank">Min Lab</a>]</a>
+    |
+<!-- Hong Kong University of Science and Technology (HKUST) -->
+    <a href="https://cse.hkust.edu.hk/~jhc/" target="_blank">Hao Chen [<a href="https://mp.weixin.qq.com/s/XccDD9BXvi1O4OD8IBpedw" target="_blank">Recruitment info</a>]</a>
+    |
+<!-- Zhejiang University -->
     <a href="https://ylab.top/jieyang/" target="_blank">Jie Yang [<a href="https://ylab.top/" target="_blank">YLab</a>]</a>
     |
   <br />
