--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -318,6 +318,8 @@
     |
     <a href="http://chinasoft.ccf.org.cn/" target="_blank">ChinaSoft</a>
     |
+    <a href="#" target="_blank">ChinaService</a>
+    |
     <a href="https://conf.scholat.com/home/ccscw/2022" target="_blank">ChinaCSCW</a>
     |
     <a href="https://ccbr99.cn/cfp.html?c=cfp" target="_blank">CCBR</a>
@@ -536,6 +538,8 @@
     <a href="https://conf.ccf.org.cn/web/html7/index.html?globalId=m8359255541705646081619341782860&type=1" target="_blank">CBC (<a href="https://mp.weixin.qq.com/s/-yCIZlsSgafmw9QtCdcEPA" target="_blank">Report</a>)</a>
     |
     <a href="https://cs.qhu.edu.cn/jqtz/41fea87f6ea94631837889f9a55f2a93.htm" target="_blank">NCSC</a>
+    |
+    <a href="http://chinaservice2021.baibuhz.com/" target="_blank">ChinaService</a>
     |
     <a href="https://dl.ccf.org.cn/albumList/getMeetingDetail5724597629962240?_ack=1" target="_blank">ChinaMM</a>
     |
@@ -1642,6 +1646,9 @@ NLP/KG Field：
     <a href="https://lidongbing.github.io/" target="_blank">Lidong Bing</a>
     |
     <a href="https://yunc.me/" target="_blank">Yun Chen</a>
+    |
+<!-- Hunan University -->
+    <a href="https://bnu05pp.github.io/" target="_blank">Peng Peng</a>
     |
 <!-- 360 -->
     <a href="https://liuhuanyong.github.io/" target="_blank">Huanyong Liu</a>
