--- a/pages/publications.html
+++ b/pages/publications.html
@@ -112,7 +112,7 @@
 <!--     <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="#"><strong><font color= "#00066f">An Extraction and Verification Framework for Harvesting Temporal Knowledge Graph from News Articles</font></strong></a>. (To be Submitted)</li> -->
 
 
-    <li>Peng Zhao, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, Xiaohui Zhan*, <a href="./venue/An_Advanced_NMF-Based_Approach_for_Single_Cell_Data_Clustering.pdf"><strong><font color= "#00066f">An advanced NMF-based approach for single cell data clustering</font></strong></a>. The 2022 2nd International Conference on Information Communication and Software Engineerin (<a href="http://www.icse.org/index.html"><strong><u><font color="#874e26">ICICSE-22</font></u></strong></a>). Chongqing, China, August 18-20 2022 (EI Indexed)</li>
+    <li>Peng Zhao, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, Xiaohui Zhan*, <a href="../venue/An_Advanced_NMF-Based_Approach_for_Single_Cell_Data_Clustering.pdf"><strong><font color= "#00066f">An advanced NMF-based approach for single cell data clustering</font></strong></a>. The 2022 2nd International Conference on Information Communication and Software Engineerin (<a href="http://www.icse.org/index.html"><strong><u><font color="#874e26">ICICSE-22</font></u></strong></a>). Chongqing, China, August 18-20 2022 (EI Indexed)</li>
 
 
 
