--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -175,6 +175,8 @@
     <a href="https://sites.google.com/site/innsaustraliachapter/" target="_blank">IJCNN</a>
     |
     <a href="#" target="_blank">PAKDD</a>
+    |
+    <a href="#" target="_blank">ECIR</a>
     | 
     <br/>
 
@@ -406,6 +408,10 @@
     <a href="https://mp.weixin.qq.com/s/JfsovwifZzSCl-5wa1_1hA" target="_blank">计算机视觉顶尖期刊和会议的段子</a>
     |
     <a href="https://mp.weixin.qq.com/s/xla-sEqNcaBYnXUlGyuWng" target="_blank">ACL2022奇葩标题大赏</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/mxoX1HhIpSqolvRlnqPPug" target="_blank">ACL 2022 主会长文论文分类整理</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/k59WQfDzkOCxiRoh3p_0tw" target="_blank">最新 NLP Prompt 代表工作梳理！ACL 2022 Prompt 方向论文解析</a>
     |
     <a href="https://mp.weixin.qq.com/s/hG3p0JB3ebtZ9jwpPEF4xw" target="_blank">7篇论文梳理关系抽取的经典范式</a>
     |   
