--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1602,6 +1602,8 @@ NLP/KG Field：
     <a href="https://xiaojingzi.github.io/" target="_blank">Jing Zhang</a>
     |
 <!-- Beijing University of Posts and Telecommunications-->
+    <a href="https://wangxiaocs.github.io/" target="_blank">Xiao Wang</a>
+    |
     <a href="http://nlp.csai.tsinghua.edu.cn/~yangcheng/" target="_blank">Cheng Yang</a>
     |
     <a href="https://ngl567.github.io/" target="_blank">Guanglin Niu</a>
@@ -1667,6 +1669,12 @@ NLP/KG Field：
 Computational Linguistics Field：
 <br />
     <a href="https://a-quei.github.io/" target="_blank">Guanyi Chen</a>
+    |    
+  <br />
+  <br />
+Language + Vision Field:
+<br />
+    <a href="https://lwwangcse.github.io/" target="_blank">Liwei Wang</a>
     |    
   <br />
   <br />
