--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -308,6 +308,8 @@
     |
     <a href="#" target="_blank">ICBK</a>
     |
+    <a href="https://www.knowledgegraph.tech/kgc-2022-program/" target="_blank">KGC</a>
+    |
     <a href="https://mp.weixin.qq.com/s/gZqE3FmZCDXPuF-ouhGcbw" target="_blank">NLGIW</a>
     |
     <a href="#" target="_blank">CHIP</a>
