--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -280,7 +280,7 @@
     |
     <a href="http://ksiresearch.org/seke/seke22.html" target="_blank">SEKE</a>
     |
-    <a href="https://sigspatial2021.sigspatial.org/cfp2022/" target="_blank">ACM SIGSPATIAL</a>
+    <a href="https://sigspatial2022.sigspatial.org/cfp/" target="_blank">ACM SIGSPATIAL</a>
     |
     <a href="https://lrec2022.lrec-conf.org/en/" target="_blank">LREC</a>
     |
@@ -1732,7 +1732,10 @@ Geographic Information Systems Field：
     <a href="https://sites.google.com/view/chengaothu/" target="_blank">Chen Gao</a>
     |
     <a href="http://staff.ustc.edu.cn/~hexn/" target="_blank">Xiangnan He</a>
-    |        
+    |
+<!-- Wuhan University -->
+    <a href="http://jszy.whu.edu.cn/ZhipengGui" target="_blank">Zhipeng Gui [<a href="http://www.luojia-spatial.com/index.html" target="_blank">Luojia-spatial Lab</a>]</a>
+    |           
   <br />
   <br />
 Complex Networks Field：
