--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -172,6 +172,8 @@
     |
     <a href="#" target="_blank">ICAPS</a>
     |
+    <a href="https://saner2023.must.edu.mo/index" target="_blank">SANER</a>
+    |
     <a href="https://sites.google.com/site/innsaustraliachapter/" target="_blank">IJCNN</a>
     |
     <a href="#" target="_blank">PAKDD</a>
