--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1105,6 +1105,8 @@
     |
     <a href="https://www.toutiao.com/i6926742934809575949/?tt_from=weixin&utm_campaign=client_share&wxshare_count=1&timestamp=1633962507&app=news_article&utm_source=weixin&utm_medium=toutiao_android&use_new_style=1&req_id=202110112228270101510732285F126BE8&share_token=c0ecdfb7-7426-44b9-b1c8-ed6f9df42be4&group_id=6926742934809575949" target="_blank">Debug无忧！清华校友打造编程神器：反向追踪变量、数据流等</a>
     |
+    <a href="https://mp.weixin.qq.com/s/zo4HivNRx7u73aDKfIwuoQ" target="_blank">60 个神级 VS Code 插件！</a>
+    |
 <!--   <br /> -->
 
 <br />
