--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -340,6 +340,8 @@
     |
     <a href="https://conf.ccf.org.cn/web/html7/HYJS.html?channelId=b486b0b37c5749e3865872adc7028a79&globalId=m9359097655178076161643179876462" target="_blank">NDBC</a>
     |
+    <a href="https://conference.lziqi.top/" target="_blank">SPATIAL DI</a>
+    |
     <br/>
     <a href="https://zhuanlan.zhihu.com/p/419669070?utm_source=wechat_session&utm_medium=social&utm_oi=1305131945592676352" target="_blank">ICLR 2022图学习领域都在研究什么？Open Review投稿文章一览</a>
     |
@@ -1739,6 +1741,8 @@ Geographic Information Systems Field：
     |
 <!-- Wuhan University -->
     <a href="http://jszy.whu.edu.cn/ZhipengGui" target="_blank">Zhipeng Gui [<a href="http://www.luojia-spatial.com/index.html" target="_blank">Luojia-spatial Lab</a>]</a>
+    |
+    <a href="https://bolongzheng.com/" target="_blank">Bolong Zheng</a>
     |           
   <br />
   <br />
