--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -328,7 +328,7 @@
     |
     <a href="#" target="_blank">ChinaService</a>
     |
-    <a href="https://conf.scholat.com/home/ccscw/2022" target="_blank">ChinaCSCW</a>
+    <a href="https://conf.scholat.com/home/ccscw/2022" target="_blank">ChineseCSCW</a>
     |
     <a href="https://ccbr99.cn/cfp.html?c=cfp" target="_blank">CCBR</a>
     |
