--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -306,7 +306,7 @@
     |
     <a href="http://sigkg.cn/ccks2022/" target="_blank">CCKS</a>
     |
-    <a href="https://mp.weixin.qq.com/s/kUAgty0Y1S3-IM4hWbDIfA" target="_blank">CCIR</a>
+    <a href="https://ccir2022.cqut.edu.cn/" target="_blank">CCIR</a>
     |
     <a href="#" target="_blank">ICBK</a>
     |
