--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -178,7 +178,7 @@
     |
     <a href="#" target="_blank">PAKDD</a>
     |
-    <a href="#" target="_blank">ECIR</a>
+    <a href="https://ecir2023.org/index.html" target="_blank">ECIR</a>
     | 
     <br/>
 
