--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -389,6 +389,8 @@
     |
     <a href="https://mp.weixin.qq.com/s/UbkAzIf4wWdKOgzxdRxy7w" target="_blank">新闻 | KEG 9篇论文被ACL 2022录用</a>
     |
+    <a href="https://mp.weixin.qq.com/s/WJvu9h3AIdC1lK4XSQHeWA" target="_blank">ACL 2022论文盘点出炉！NLP好文一口气读完</a>
+    |
     <a href="https://mp.weixin.qq.com/s/BxyIrC9Pvir1hJp3DwAdLQ" target="_blank">7 Papers | AAAI22杰出论文、WSDM22最佳论文；200+文献ViT综述</a>
     |
     <a href="https://mp.weixin.qq.com/s/D2l-9E8Zz-1mNl53dhmLEA" target="_blank">WWW2022推荐系统/计算广告论文集锦</a>
@@ -1749,7 +1751,10 @@ Geographic Information Systems Field：
     <a href="http://jszy.whu.edu.cn/ZhipengGui" target="_blank">Zhipeng Gui [<a href="http://www.luojia-spatial.com/index.html" target="_blank">Luojia-spatial Lab</a>]</a>
     |
     <a href="https://bolongzheng.com/" target="_blank">Bolong Zheng</a>
-    |           
+    |
+<!--  -->
+    <a href="http://dky.njnu.edu.cn/info/1228/1745.htm" target="_blank">Xueying Zhang</a>
+    |
   <br />
   <br />
 Complex Networks Field：
