--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1718,7 +1718,10 @@ Machine Learning Field：
     |
 <!-- Renmin University of China -->
     <a href="https://hongtengxu.github.io/" target="_blank">Hongteng Xu</a>
-    |        
+    |
+<!-- UESTC -->
+    <a href="https://sites.google.com/site/zhaokanghomepage/home" target="_blank">Zhao Kang</a>
+    |         
   <br />
   <br />
 Database Field：
