--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -109,6 +109,8 @@
     <li><strong><font color="#874e26"><a href="https://dai.fmph.uniba.sk/~sefranek/kri/handbook/handbook_of_kr.pdf">Handbook of Knowledge Representation  [<a href="https://mp.weixin.qq.com/s/S_m-QMVCx-GcmHH7zUO8Zw" target="_blank">Report</a>]</a></font></strong></li>
 
 
+    <li><strong><font color="#874e26"><a href="https://link.springer.com/content/pdf/10.1007/978-3-030-37439-6.pdf">Knowledge Graphs: Methodology, Tools and Selected Use Cases [<a href="https://mp.weixin.qq.com/s/yjzZyZQZbKT0rQvkvtBo9A" target="_blank">Report</a>]</a></font></strong></li>
+
 <!--     <li><strong><font color="#874e26"><a href="https://link.springer.com/content/pdf/10.1007%2F978-3-030-53199-7.pdf">Knowledge Graphs and Big Data Processing</a></font></strong></li> -->
 
     <li><strong><font color="#874e26"><a href="https://arxiv.org/pdf/2009.05426.pdf">Semantic Relations and Deep Learning  [<a href="https://mp.weixin.qq.com/s/sot4I-anfuTe8kfXHEj34w" target="_blank">Report</a>]</a></font></strong></li>
