--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1736,6 +1736,12 @@ Database Field：
     |        
   <br />
   <br />
+Recommender System Field：
+<br />
+    <a href="https://zhaoxyai.github.io/" target="_blank">Xiangyu Zhao</a>
+    |      
+  <br />
+  <br />
 Spatial-Temporal Data Mining Field：
 <br />
     <a href="https://wangleye.github.io/" target="_blank">Leye Wang</a>
