--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1606,6 +1606,8 @@ NLP/KG Field：
 <!-- HK -->
     <a href="https://taoyds.github.io/" target="_blank">Tao Yu</a>
     |
+    <a href="https://leuchine.github.io/" target="_blank">Qi Liu</a>
+    |
 <!-- Chinese Academy of Sciences, -->
     <a href="http://www.bigdatalab.ac.cn/~jinxiaolong/" target="_blank">Xiaolong Jin</a>
     |
