--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1824,6 +1824,8 @@ SE Field：
 <!-- HK -->
     <a href="https://cuiyungao.github.io/" target="_blank">Cuiyun Gao</a>
     |
+    <a href="http://shenjiasi.com/" target="_blank">Jiasi Shen</a>
+    |
   <br />
   <br />
 Service Computation Field：
