--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1781,7 +1781,10 @@ Complex Networks Field：
 Visual Analytics Field:
 <br />
     <a href="http://www.cad.zju.edu.cn/home/chenwei/" target="_blank">Wei Chen</a>
-    |       
+    |
+<!-- Chongqing University -->
+    <a href="http://www.ccee.cqu.edu.cn/info/1016/1585.htm" target="_blank">Lei Zhang</a>
+    |
   <br />
   <br />
 3D Vision System Field:
