--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -111,6 +111,9 @@
 
     <li><strong><font color="#874e26"><a href="https://link.springer.com/content/pdf/10.1007/978-3-030-37439-6.pdf">Knowledge Graphs: Methodology, Tools and Selected Use Cases [<a href="https://mp.weixin.qq.com/s/yjzZyZQZbKT0rQvkvtBo9A" target="_blank">Report</a>]</a></font></strong></li>
 
+
+    <li><strong><font color="#874e26"><a href="https://pan.baidu.com/s/1mHbrhwmOQMUlN8ohschkTg?pwd=w3v2">Designing and Building Enterprise Knowledge Graphs [<a href="https://mp.weixin.qq.com/s/Z8HAJ1o9_mXwuTNhQa4eew" target="_blank">Report</a>]</a></font></strong></li>
+
 <!--     <li><strong><font color="#874e26"><a href="https://link.springer.com/content/pdf/10.1007%2F978-3-030-53199-7.pdf">Knowledge Graphs and Big Data Processing</a></font></strong></li> -->
 
     <li><strong><font color="#874e26"><a href="https://arxiv.org/pdf/2009.05426.pdf">Semantic Relations and Deep Learning  [<a href="https://mp.weixin.qq.com/s/sot4I-anfuTe8kfXHEj34w" target="_blank">Report</a>]</a></font></strong></li>
