--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1754,7 +1754,9 @@ Recommender System Field：
 Spatial-Temporal Data Mining Field：
 <br />
     <a href="https://wangleye.github.io/" target="_blank">Leye Wang</a>
-    |     
+    |
+    <a href="http://www.kangry.net/blog/?type=about-me" target="_blank">Ruiyuan Li</a>
+    |   
   <br />
   <br />
 Geographic Information Systems Field：
