--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1862,6 +1862,9 @@ Neuroscience Field：
   <br />
 Biochemistry Field：
 <br />
+<!-- National University of Singapore -->
+    <a href="https://www.boxiangliulab.com/team" target="_blank">Boxiang Liu [<a href="https://www.boxiangliulab.com/research" target="_blank">Genomic Data Science Group</a>]</a>
+    |
 <!-- 北京智源研究院, https://www.baai.ac.cn/ -->
     <a href="https://bigaidream.github.io/" target="_blank">Jie Fu [<a href="https://zhuanlan.zhihu.com/p/477800872?utm_source=wechat_timeline&utm_medium=social&utm_oi=69409255194624&s_r=0&wechatShare=2" target="_blank">Recruitment info</a>]</a>
     |
