--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1588,6 +1588,8 @@ NLP/KG Field：
 <!-- UK -->
     <a href="https://www.cs.ox.ac.uk/isg/people/jiaoyan.chen/" target="_blank">Jiaoyan Chen</a>
     |
+    <a href="https://warwick.ac.uk/fac/sci/dcs/people/weiren_yu/" target="_blank">Weiren Yu</a>
+    |
 <!-- Canada -->
     <a href="https://sites.ualberta.ca/~bang3/index.html" target="_blank">Bang Liu</a> 
     |
