--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1652,6 +1652,8 @@ NLP/KG Field：
 <!-- Fudan University (FDU) -->
     <a href="https://jiangjiechen.github.io/" target="_blank">Jiangjie Chen</a>
     |
+    <a href="https://galina0217.github.io/" target="_blank">Jiarong Xu</a>
+    |
 <!-- Southeast University-->
     <a href="http://seu.wangmengsd.com/" target="_blank">Meng Wang</a>
     |
