--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1725,6 +1725,9 @@ Human-computer Interaction Field：
 Data mining Field：
 <br />
     <a href="https://xiangzhang.info/index.html" target="_blank">Xiang Zhang</a>
+    |
+<!-- Chongqing University -->
+    <a href="http://www.ccee.cqu.edu.cn/info/1016/1585.htm" target="_blank">Lei Zhang</a>
     |    
   <br />
   <br />
@@ -1796,8 +1799,8 @@ Visual Analytics Field:
 <br />
     <a href="http://www.cad.zju.edu.cn/home/chenwei/" target="_blank">Wei Chen</a>
     |
-<!-- Chongqing University -->
-    <a href="http://www.ccee.cqu.edu.cn/info/1016/1585.htm" target="_blank">Lei Zhang</a>
+<!-- Peking University -->
+    <a href="https://www.scholat.com/yuanxiaoru" target="_blank">Xiaoru Yuan</a>
     |
   <br />
   <br />
