--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -186,7 +186,7 @@
     |
     <a href="https://saner2023.must.edu.mo/index" target="_blank">SANER</a>
     |
-    <a href="https://sites.google.com/site/innsaustraliachapter/" target="_blank">IJCNN</a>
+    <a href="https://2023.ijcnn.org/" target="_blank">IJCNN</a>
     |
     <a href="#" target="_blank">PAKDD</a>
     |
