--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -191,7 +191,9 @@
     <a href="#" target="_blank">PAKDD</a>
     |
     <a href="https://ecir2023.org/index.html" target="_blank">ECIR</a>
-    | 
+    |
+    <a href="http://www.ieee-smart-world.org/2022/uic/cfp.php" target="_blank">UIC</a>
+    |
     <br/>
 
 
