--- a/pages/publications.html
+++ b/pages/publications.html
@@ -116,7 +116,7 @@
 
 
 
-    <li>Jiasheng Zhang, Shuang Liang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, and <a href="http://cfm.uestc.edu.cn/~shaojie/" target="_blank">Jie Shao</a>*, <a href="#"><strong><font color= "#00066f"> Temporal knowledge graph representation learning with local and global evolutions</font></strong></a>. Knowledge-Based Systems (<a href="https://www.journals.elsevier.com/information-sciences"><strong><u><font color="#874e26">KBS</font></u></strong></a>). (IF = 8.038, CCF-C, JCR Q1, 中科院 Q1)</li>
+    <li>Jiasheng Zhang, Shuang Liang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, and <a href="http://cfm.uestc.edu.cn/~shaojie/" target="_blank">Jie Shao</a>*, <a href="https://www.sciencedirect.com/science/article/pii/S0950705122006141"><strong><font color= "#00066f"> Temporal knowledge graph representation learning with local and global evolutions</font></strong></a>. Knowledge-Based Systems (<a href="https://www.journals.elsevier.com/information-sciences"><strong><u><font color="#874e26">KBS</font></u></strong></a>). (IF = 8.038, CCF-C, JCR Q1, 中科院 Q1)</li>
 
 
 
