--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1804,6 +1804,9 @@ Visual Analytics Field:
 <!-- Peking University -->
     <a href="https://www.scholat.com/yuanxiaoru" target="_blank">Xiaoru Yuan</a>
     |
+<!-- Tongji University -->
+    <a href="http://nancao.org/" target="_blank">Nan Cao [<a href="https://idvxlab.com/index.html" target="_blank">iDVX_Eng</a>] [<a href="https://mp.weixin.qq.com/s/5na5C64RH2tWIicodcVG-A" target="_blank">iDVX_CN</a>]</a>
+    |
   <br />
   <br />
 3D Vision System Field:
