--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1772,7 +1772,9 @@ Spatial-Temporal Data Mining Field：
     <a href="https://wangleye.github.io/" target="_blank">Leye Wang</a>
     |
     <a href="http://www.kangry.net/blog/?type=about-me" target="_blank">Ruiyuan Li</a>
-    |   
+    |
+    <a href="https://raymondhliu.github.io/" target="_blank">Hao Liu</a>
+    |     
   <br />
   <br />
 Geographic Information Systems Field：
