--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1859,6 +1859,9 @@ SE Field：
     |
     <a href="http://shenjiasi.com/" target="_blank">Jiasi Shen</a>
     |
+<!-- Peking University -->
+    <a href="https://cs.pku.edu.cn/info/1078/2208.htm" target="_blank">Tao Xie</a>
+    |
   <br />
   <br />
 Service Computation Field：
