--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -178,13 +178,25 @@
     |
     <a href="https://2023.sigmod.org/index.shtml" target="_blank">ACM SIGMOD</a>
     |
+<!-- software engineering - A-->
+    <a href="#" target="_blank">ASE</a>
+    | 
+    <a href="https://fse.iacr.org/2023/" target="_blank">FSE ESEC</a>
+    |
     <a href="https://conf.researchr.org/home/icse-2023" target="_blank">ICSE</a>
     |
     <a href="#" target="_blank">AAMAS</a>
     |
     <a href="#" target="_blank">ICAPS</a>
     |
+<!-- software engineering - B-->
+    <a href="https://etaps.org/" target="_blank">ETAPS</a>
+    |
     <a href="https://saner2023.must.edu.mo/index" target="_blank">SANER</a>
+    |
+    <a href="#" target="_blank">RE</a>
+    |
+    <a href="#" target="_blank">CAiSE</a>
     |
     <a href="https://2022.ieeeicme.org/" target="_blank">ICME</a>
     |
@@ -197,6 +209,15 @@
     <a href="https://ecir2023.org/index.html" target="_blank">ECIR</a>
     |
     <a href="http://www.ieee-smart-world.org/2022/uic/cfp.php" target="_blank">UIC</a>
+    |
+<!-- SE - C-->
+    <a href="#" target="_blank">APSEC</a>
+    |
+    <a href="#" target="_blank">MSR</a>
+    |
+    <a href="https://2023.refsq.org/" target="_blank">REFSQ</a>
+    |
+    <a href="https://www.icwe2023.com/" target="_blank">ICWE</a>
     |
     <br/>
 
@@ -266,6 +287,10 @@
     | 
     <a href="https://conf.researchr.org/track/icpc-2022/icpc-2022-research" target="_blank">ICPC</a>
     |
+    <a href="https://conf.researchr.org/home/RE-2022" target="_blank">RE</a>
+    |
+    <a href=" https://caise22.ugent.be/" target="_blank">CAiSE</a>
+    |
     <a href="https://conf.researchr.org/track/models-2022/models-2022-technical-track" target="_blank">MoDELS</a>
     |
     <a href="https://conferences.computer.org/icws/2022/cfp/" target="_blank">ICWS</a>
@@ -315,6 +340,13 @@
     <a href="https://mp.weixin.qq.com/s/zIgGkfakkejiehQsSbpH6w" target="_blank">WISA</a>
     |
     <a href="https://globecom2022.ieee-globecom.org/" target="_blank">GLOBECOM</a>
+    |
+<!-- SE -->
+    <a href="https://conf.researchr.org/home/apsec-2022" target="_blank">APSEC</a>
+    |
+    <a href="https://conf.researchr.org/home/msr-2022" target="_blank">MSR</a>
+    |
+    <a href="https://2022.refsq.org/" target="_blank">REFSQ</a>
     |
     <a href="https://www.aacl2022.org/Submission/paper" target="_blank">AACL-IJCNLP (<a href="https://mp.weixin.qq.com/s/QvByOQY2NzSYsGbYRZlmcA" target="_blank">Translation</a>)</a>
     |    
