--- a/pages/activities.html
+++ b/pages/activities.html
@@ -66,7 +66,30 @@
     margin: 30px 0 5px;
     border-left: 5px solid #0084f2;">Program Committee</h3>
 <ul>
+
+    <li><strong>PC member</strong>, The 21st China National Conference on Computational Linguistics (<a href="http://cips-cl.org/static/CCL2022/index.html"><strong><u><font color="#874e26">CCL 2022</font></u></strong></a>), Nanchang, China, October 14-16, 2022</li>
+
+
+    <li><strong>PC member</strong>, The 8th International Conference on Data Mining (<a href="https://csit2022.org/dami/index"><strong><u><font color="#874e26">DaMi 2022</font></u></strong></a>), Chennai, India, August 20-21, 2022</li>
+
+
+    <li><strong>PC member</strong>, The 29th International Conference on Neural Information Processing (<a href="https://iconip2022.apnns.org/"><strong><u><font color="#874e26">ICONIP 2022</font></u></strong></a>), New Delhi, India, November 22-26, 2022</li>
+
+
+    <li><strong>PC member</strong>, China Conference on Knowledge Graph and Semantic Computing (<a href="http://sigkg.cn/ccks2022/"><strong><u><font color="#874e26">CCKS 2022</font></u></strong></a>), Qinhuangdao, China, August 25-28, 2022</li>
+
+
+    <li><strong>PC member</strong>, International Conference on Images, Signals, and Computing (<a href="http://icisc-conf.org/"><strong><u><font color="#874e26">ICISC 2023</font></u></strong></a>), Chengdu, China, April 15-17, 2023</li>
+
+
+    <li><strong>PC member</strong>, International Conference Advanced Data Mining and Applications (<a href="https://adma2022.uqcloud.net/index.html"><strong><u><font color="#874e26">ADMA 2022</font></u></strong></a>), Brisbane, Australia, 30th November-2nd December, 2022</li>
+
+
+    <li><strong>PC member</strong>, The European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases (<a href="https://2022.ecmlpkdd.org/"><strong><u><font color="#874e26">ECML-PKDD 2022</font></u></strong></a>), Grenoble, France, September 19-23, 2022</li>
+
+
     <li><strong>PC member</strong>, The 4th Asia Pacific Web and Web-Age Information Management Joint Conference on Web and Big Data (<a href="http://www.tjudb.cn/apwebwaim2020/node/20"><strong><u><font color="#874e26">APWeb-WAIM 2020</font></u></strong></a>), Tianjin, China, August 12-14, 2020</li>
+
 
     <li><strong>PC member</strong>, The 5th Asia Pacific Web and Web-Age Information Management Joint Conference on Web and Big Data (<a href="http://139.159.245.147/program_committee"><strong><u><font color="#874e26">APWeb-WAIM 2021</font></u></strong></a>), Guangzhou, China, August 23-25, 2021</li>
 </ul>
@@ -82,6 +105,32 @@
     margin: 30px 0 5px;
     border-left: 5px solid #0084f2;">Reviewer</h3>
 <ul>
+
+    <li><strong>Invited Reviewer</strong>, The 21st China National Conference on Computational Linguistics (<a href="http://cips-cl.org/static/CCL2022/index.html"><strong><u><font color="#874e26">CCL 2022</font></u></strong></a>), Nanchang, China, October 14-16, 2022</li>
+
+
+    <li><strong>Invited Reviewer</strong>, The 8th International Conference on Data Mining (<a href="https://csit2022.org/dami/index"><strong><u><font color="#874e26">DaMi 2022</font></u></strong></a>), Chennai, India, August 20-21, 2022</li>
+
+
+    <li><strong>Invited Reviewer</strong>, The 29th International Conference on Neural Information Processing (<a href="https://iconip2022.apnns.org/"><strong><u><font color="#874e26">ICONIP 2022</font></u></strong></a>), New Delhi, India, November 22-26, 2022</li>
+
+
+    <li><strong>Invited Reviewer</strong>, China Conference on Knowledge Graph and Semantic Computing (<a href="http://sigkg.cn/ccks2022/"><strong><u><font color="#874e26">CCKS 2022</font></u></strong></a>), Qinhuangdao, China, August 25-28, 2022</li>
+
+
+    <li><strong>Invited Reviewer</strong>, International Conference on Images, Signals, and Computing (<a href="http://icisc-conf.org/"><strong><u><font color="#874e26">ICISC 2023</font></u></strong></a>), Chengdu, China, April 15-17, 2023</li>
+
+
+    <li><strong>Invited Reviewer</strong>, International Conference Advanced Data Mining and Applications (<a href="https://adma2022.uqcloud.net/index.html"><strong><u><font color="#874e26">ADMA 2022</font></u></strong></a>), Brisbane, Australia, 30th November-2nd December, 2022</li>
+
+
+    <li><strong>Invited Reviewer</strong>, The European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases (<a href="https://2022.ecmlpkdd.org/"><strong><u><font color="#874e26">ECML-PKDD 2022</font></u></strong></a>), Grenoble, France, September 19-23, 2022</li>
+
+
+    <li><strong>Invited Reviewer</strong>, APWeb-WAIM 2022 (<a href="https://apweb-waim2022.com/"><strong><u><font color="#874e26">APWeb-WAIM 2022</font></u></strong></a>)
+    </li>
+
+
     <li><strong>Invited Reviewer</strong>, APWeb-WAIM 2021 (<a href="http://139.159.245.147/"><strong><u><font color="#874e26">APWeb-WAIM 2021</font></u></strong></a>)
     </li>
 
