--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1742,6 +1742,12 @@ NLP/KG Field：
     |
   <br />
   <br />
+KG in the Energy Field：
+<br />
+    <a href="https://scholar.google.com/citations?user=nOMt_KkAAAAJ" target="_blank">Yuntian Chen [<a href="https://mp.weixin.qq.com/s/kHdxy5noz4g_tqHM7doauQ" target="_blank">Recruitment Info</a>]</a>
+    |    
+  <br />
+  <br />
 Computational Linguistics Field：
 <br />
     <a href="https://a-quei.github.io/" target="_blank">Guanyi Chen</a>
