--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1745,6 +1745,8 @@ NLP/KG Field：
 KG in the Energy Field：
 <br />
     <a href="https://scholar.google.com/citations?user=nOMt_KkAAAAJ" target="_blank">Yuntian Chen [<a href="https://mp.weixin.qq.com/s/kHdxy5noz4g_tqHM7doauQ" target="_blank">Recruitment Info</a>]</a>
+    |
+    <a href="https://www.sydney.edu.au/engineering/about/our-people/academic-staff/fengji-luo.html#collapseReStudents" target="_blank">Fengji Luo</a>
     |    
   <br />
   <br />
