--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -388,6 +388,8 @@
     |
     <a href="https://ccbr99.cn/cfp.html?c=cfp" target="_blank">CCBR</a>
     |
+    <a href="https://www.cac2022.org.cn/" target="_blank">CAC</a>
+    |
     <a href="https://www.chilconference.org/index.html" target="_blank">CHIL</a>
     |
     <a href="http://iccrd.org/" target="_blank">ICCRD</a>
