--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -390,6 +390,8 @@
     |
     <a href="https://www.cac2022.org.cn/" target="_blank">CAC</a>
     |
+    <a href="http://bigdata.ccf.org.cn/sub.html" target="_blank">CCF Bigdata</a>
+    |    
     <a href="https://www.chilconference.org/index.html" target="_blank">CHIL</a>
     |
     <a href="http://iccrd.org/" target="_blank">ICCRD</a>
@@ -1874,6 +1876,9 @@ Distributional System Field：
     | 
     <a href="https://haow.ca/" target="_blank">Yang You [<a href="https://ai.comp.nus.edu.sg/" target="_blank">HPC-AI</a>]</a>
     |
+<!-- Westlake University -->
+    <a href="https://tlin-taolin.github.io/" target="_blank">Lin Tao [<a href="https://lins-lab.github.io/" target="_blank">LINs Lab</a>]</a>
+    |  
 <!-- Beijing University -->
     <a href="http://net.pku.edu.cn/~yangzhi/" target="_blank">Zhi Yang</a>
     |  
