--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1767,7 +1767,9 @@ Computational Linguistics Field：
 Language + Vision Field:
 <br />
     <a href="https://lwwangcse.github.io/" target="_blank">Liwei Wang</a>
-    |    
+    |
+    <a href="https://delay-xili.github.io/" target="_blank">Xili Dai</a>
+    |     
   <br />
   <br />
 Human-computer Interaction Field：
@@ -1839,6 +1841,8 @@ Geographic Information Systems Field：
     <a href="http://jszy.whu.edu.cn/ZhipengGui" target="_blank">Zhipeng Gui [<a href="http://www.luojia-spatial.com/index.html" target="_blank">Luojia-spatial Lab</a>]</a>
     |
     <a href="https://bolongzheng.com/" target="_blank">Bolong Zheng</a>
+    |
+    <a href="http://www.lmars.whu.edu.cn/prof_web/zhangtong/index.html" target="_blank">Tong Zhang</a>
     |
 <!--  -->
     <a href="http://dky.njnu.edu.cn/info/1228/1745.htm" target="_blank">Xueying Zhang</a>
