--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -374,7 +374,7 @@
     |
     <a href="#" target="_blank">CHIP</a>
     |
-    <a href="#" target="_blank">IJCKG</a>
+    <a href="http://www.ijckg.org/2022/index.html" target="_blank">IJCKG</a>
     |
     <a href="#" target="_blank">CBC (<a href="#" target="_blank">Report</a>)</a>
     |
