--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <div class="container">
 
 <p>
-<img width="300" src="./" align="right" alt="this is me">
+<img width="300" src="./img/profile.jpg" align="right" alt="this is me">
 </p><h2>Yongpan Sheng (盛泳潘 in Chinese)</h2>
 School of Big Data and Software Engineering<br/>
 Chongqing University<br/> 
