--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1671,7 +1671,7 @@ NLP/KG Field：
 <!-- Chinese Academy of Sciences, -->
     <a href="http://www.bigdatalab.ac.cn/~jinxiaolong/" target="_blank">Xiaolong Jin</a>
     |
-    <a href="http://www.bigdatalab.ac.cn/~zhangruqing/" target="_blank">Ruqing Zhang</a>
+    <a href="https://daqingchong.github.io/" target="_blank">Ruqing Zhang</a>
     |
 <!-- Institute of computing technology, Chinese Academy of Sciences -->
     <a href="http://nelist.iie.cas.cn/yjspy/sssds/201607/t20160705_341584.html" target="_blank">Yanan Cao</a>
