--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -411,6 +411,8 @@
     |
     <a href="https://mp.weixin.qq.com/s/9ZZNV_YmOjbeU3OfBYiSCQ" target="_blank">元学习热度不再！ICLR 2022投稿趋势：强化学习榜首，深度学习第二</a>
     |
+    <a href="https://www.paperdigest.org/topic/?topic=icml&year=2022" target="_blank">Paper Digest: ICML 2022 Highlights</a> (<a href="https://mp.weixin.qq.com/s/pNVoBySG3hLbIePyLfK4RA" target="_blank">report</a>)
+    |
     <a href="https://mp.weixin.qq.com/s/SDXhFKHhqPNoUEFa33sduA" target="_blank">ACL2022赶会必备，拿来即用之Abstract和Related Work</a>
     |
     <a href="https://mp.weixin.qq.com/s/1CIEsTRdcd5lpemRy4PXbw" target="_blank">NLP的“第四范式”之Prompt Learning总结：44篇论文逐一梳理</a>
