--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1853,6 +1853,12 @@ Geographic Information Systems Field：
     |
   <br />
   <br />
+Internet-of-Things Field：
+<br />
+    <a href="https://www.eee.hku.hk/people/echngai/" target="_blank">Edith C.H. Ngai</a>
+    |       
+  <br />
+  <br />
 Complex Networks Field：
 <br />
     <a href="http://networkscience.cn/" target="_blank">Xiaolong Ren</a>
