--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1684,6 +1684,9 @@ NLP/KG Field：
 <!-- Shenzhen Institute of Advanced Technology (SIAT), Chinese Academy of Sciences -->
     <a href="https://sites.google.com/site/crystalziyulu/home" target="_blank">Ziyu Lyu</a>
     |
+<!-- University of Science and Technology of China (USTC) -->
+    <a href="http://staff.ustc.edu.cn/~wanghao3/" target="_blank">Hao Wang</a>
+    |
 <!-- Renmin University of China -->
     <a href="https://xiaojingzi.github.io/" target="_blank">Jing Zhang</a>
     |
