--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -345,12 +345,14 @@
     |
     <a href="https://globecom2022.ieee-globecom.org/" target="_blank">GLOBECOM</a>
     |
-<!-- SE -->
+<!-- SE CCF-C -->
     <a href="https://conf.researchr.org/home/apsec-2022" target="_blank">APSEC</a>
     |
     <a href="https://conf.researchr.org/home/msr-2022" target="_blank">MSR</a>
     |
     <a href="https://2022.refsq.org/" target="_blank">REFSQ</a>
+    |
+    <a href="https://qrs22.techconf.org/" target="_blank">QRS</a>
     |
     <a href="https://www.aacl2022.org/Submission/paper" target="_blank">AACL-IJCNLP (<a href="https://mp.weixin.qq.com/s/QvByOQY2NzSYsGbYRZlmcA" target="_blank">Translation</a>)</a>
     |    
@@ -593,6 +595,18 @@
     |
     <a href="http://wise-conferences.org/2021/program.html" target="_blank">WISE</a>
     |
+<!-- SE - C-->
+    <a href="https://apsec2021.seat.org.tw/" target="_blank">APSEC</a>
+    |
+<!--     <a href="#" target="_blank">MSR</a>
+    | -->
+    <a href="https://2023.refsq.org/" target="_blank">REFSQ</a>
+    |
+    <a href="https://qrs21.techconf.org/" target="_blank">QRS</a>
+    |
+    <a href="https://www.icwe2023.com/" target="_blank">ICWE</a>
+    |
+<!--  -->
     <a href="https://sigspatial2021.sigspatial.org/" target="_blank">ACM SIGSPATIAL</a>
     |
     <a href="https://inlg2021.github.io/pages/papers.html" target="_blank">INLG</a>
