--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1195,6 +1195,8 @@
     |
     <a href="https://mp.weixin.qq.com/s/zo4HivNRx7u73aDKfIwuoQ" target="_blank">60 个神级 VS Code 插件！</a>
     |
+    <a href="https://mp.weixin.qq.com/s/en-A4IWd7BfKgqqF0qtoBg" target="_blank">太赞了！Python 开发神器Jupyter竟然还有可视化debug功能！</a>
+    |
 <!--   <br /> -->
 
 <br />
