--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1694,6 +1694,9 @@ NLP/KG Field：
     |
     <a href="https://leuchine.github.io/" target="_blank">Qi Liu</a>
     |
+<!-- Peking University -->
+    <a href="https://wanxiaojun.github.io/" target="_blank">Xiaojun Wan</a>
+    |
 <!-- Chinese Academy of Sciences, -->
     <a href="http://www.bigdatalab.ac.cn/~jinxiaolong/" target="_blank">Xiaolong Jin</a>
     |
