--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1784,6 +1784,12 @@ NLP/KG Field：
     |
   <br />
   <br />
+AI/NLP in Education Field：
+<br />
+    <a href="https://angusglchen.github.io/" target="_blank">Guanliang Chen</a>
+    |    
+  <br />
+  <br />
 KG in the Energy Field：
 <br />
     <a href="https://scholar.google.com/citations?user=nOMt_KkAAAAJ" target="_blank">Yuntian Chen [<a href="https://mp.weixin.qq.com/s/kHdxy5noz4g_tqHM7doauQ" target="_blank">Recruitment Info</a>]</a>
