--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1463,6 +1463,8 @@
     |
     <a href="http://ruiyan.me/" target="_blank">Rui Yan</a>
     |
+    <a href="https://www.wict.pku.edu.cn/huwei/" target="_blank">Wei Hu</a>
+    |
   <!-- 中科院计算所/软件所/自动化所 -->
     <a href="http://nlpr-web.ia.ac.cn/cip/english/~junzhao/index.html" target="_blank">Jun Zhao</a>
     |
