--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -200,6 +200,8 @@
     |
     <a href="#" target="_blank">CAiSE</a>
     |
+    <a href="https://2023.ieeeicassp.org/welcome-message/" target="_blank">ICASSP</a>
+    |
     <a href="https://2022.ieeeicme.org/" target="_blank">ICME</a>
     |
     <a href="https://icmr2023.org/" target="_blank">ICMR</a>
