--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1701,6 +1701,9 @@ NLP/KG Field：
 <!-- Peking University -->
 <!--     <a href="https://wanxiaojun.github.io/" target="_blank">Xiaojun Wan</a>
     | -->
+<!-- Nanjing University -->
+    <a href="https://sunzequn.github.io/" target="_blank">Zequn Sun</a>
+    |
 <!-- Chinese Academy of Sciences, -->
     <a href="http://www.bigdatalab.ac.cn/~jinxiaolong/" target="_blank">Xiaolong Jin</a>
     |
