--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1973,6 +1973,9 @@ SE Field：
 <!-- Peking University -->
     <a href="https://cs.pku.edu.cn/info/1078/2208.htm" target="_blank">Tao Xie</a>
     |
+<!-- Fudan University -->
+    <a href="https://cspengxin.github.io/" target="_blank">Xin Peng [<a href="http://codewisdom.net/" target="_blank">CodeWisdom</a>]</a>
+    |
   <br />
   <br />
 Service Computation Field：
