--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1652,6 +1652,9 @@ NLP/KG Field：
     |
     <a href="https://eric-xw.github.io/" target="_blank">Xin (Eric) Wang</a>
     |
+<!-- Rensselaer Polytechnic Institute -->
+    <a href="https://sites.google.com/site/diyali916/" target="_blank">Dixia Li</a>
+    |
 <!-- New Jersey Institute of Technology -->
     <a href="https://web.njit.edu/~ym329/index.html" target="_blank">Yao Ma</a>
     |
