--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ Check out Sheng's up-to-date CV for more details.
 <h3>Recent News</h3>
 <ul>
     <li style="text-align:justify">
-      [2022/08/03]&nbsp;&nbsp; <font color="#FF0000">CALL FOR PAPER: We are organizing a <a href="https://www.mdpi.com/journal/entropy/special_issues/82WTZCNLE4" target="_blank">special issue (opens the new window)</a> on graph neural networks in the Entropy Journal. Welcome your submission.</font>
+      [2022/08/03]&nbsp;&nbsp; <font color="#FF0000">CALL FOR PAPER: We are organizing a <a href="https://www.mdpi.com/journal/entropy/special_issues/82WTZCNLE4" target="_blank">special issue (opens the new window)</a> on Information Network Mining and Applications in the Entropy Journal. Welcome your submission.</font>
     </li>
     <li style="text-align:justify">
       [2020/07/16]&nbsp;&nbsp; I successfully defended my dissertation entitled "Research and Application of Learning Methods for Knowledge Graphs" and will ready to move on a new start.
