--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -497,6 +497,8 @@
     | 
     <a href="https://mp.weixin.qq.com/s/EVybzdMxi0KFg8tMhqUpsg" target="_blank">1987-2020最具影响力的 NIPS 论文！！！</a>
     |
+    <a href="https://mp.weixin.qq.com/s/vJdr3bBrac76q_FF9WOduQ" target="_blank">结合NAACL2022经历看NLP研究热点</a>
+    |
 </br>
 </br>
     Knowledge Graphs: 
