--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -491,6 +491,8 @@
     |
     <a href="https://mp.weixin.qq.com/s/mxoX1HhIpSqolvRlnqPPug" target="_blank">ACL 2022 主会长文论文分类整理</a>
     |
+    <a href="https://mp.weixin.qq.com/s/N0iYxE2xMa9LdHmZdUU2tw" target="_blank">从ACL 2022 Onsite经历看NLP热点</a>
+    |
     <a href="https://mp.weixin.qq.com/s/k59WQfDzkOCxiRoh3p_0tw" target="_blank">最新 NLP Prompt 代表工作梳理！ACL 2022 Prompt 方向论文解析</a>
     |
     <a href="https://mp.weixin.qq.com/s/hG3p0JB3ebtZ9jwpPEF4xw" target="_blank">7篇论文梳理关系抽取的经典范式</a>
